# audio_utils

./: .gitignore  Cargo.toml  LICENSE-MIT.txt  README.md
.cargo/: config.toml
examples/: db_gain_benchmark.rs  db_to_volt_benchmark.rs  gain_db_benchmark.rs  volt_to_db_benchmark.rs
examples/tiny_gain_plug/: Cargo.toml
examples/tiny_gain_plug/src/: lib.rs
src/: decibels.rs  lib.rs  tiny_smoother.rs
