[package]
name = "audio_utils"
version = "0.1.0"
edition = "2024"

[dependencies]
log = "0.4.27"

[dev-dependencies]
rand = { version = "0.9.2", features = ["small_rng"] }



[profile.release]
opt-level = 3
lto = false         # avoids Conflicts with an embed-bitcode at a cargo bench
codegen-units = 1   # better Optimizing, slower Builds
debug = false
incremental = false

[profile.bench]
inherits = "release"