[package]
name = "audio_utils"
version = "0.1.0"
edition = "2024"
authors = ["Harald-LB"]
description = "Utilities for real-time audio processing"
readme = "README.md"
repository = "https://github.com/Harald-LB/audio_utils"
license = "MIT"
keywords = ["audio", "dsp", "real-time", "decibel", "smoothing"]
categories = ["multimedia::audio", "no-std"]

[dependencies]

[dev-dependencies]
rand = { version = "0.9.2", features = ["small_rng"] }

[profile.release]
opt-level = 3
lto = false         # avoids Conflicts with an embed-bitcode at a cargo bench
codegen-units = 1   # better Optimizing, slower Builds
debug = false
incremental = false

[workspace]
members = [
    "xtask",
    "examples/tiny_gain_plug",
]
